--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -23,7 +23,7 @@
 
         @font-face {
             font-family: main;
-            src: url("../0Font/Dark-Sans.ttf");
+            src: url("../0Font/Dark-Sans.woff");
         }
     </style>
 
@@ -34,7 +34,7 @@
                 <span class="text">
                     دریافت اخرین اخبار آموزشگاه
                 </span>
-                <img class="img" src="../0IMages/Asset 17-8.png" alt="">
+                <img class="img" src="./IMages/Asset 17-8.png" alt="">
             </div>
             <div class="inputwrapper">
                 <input class="emailInput" type="text" placeholder="ایمیل خود را وارد کنید">
@@ -45,9 +45,10 @@
 
         <div class="centerTop">
             <div class="layer1">
-                <p class="en">TAHLILDADEH ACADEMY</p>
+                <img src="./IMages/Asset 21-8.png" alt="">
+                <p class="title">TAHLILDADEH ACADEMY</p>
                 <p class="address">خیابان شریعتی، بالاتر از ملک، پلاک 567، طبقه 2، واحد 7</p>
-                <p class="en">www.tahlildadeh.com</p>
+                <p class="site">www.tahlildadeh.com</p>
                 <p class="num">88146330</p>
             </div>
         </div>
@@ -55,7 +56,7 @@
         <div class="leftTop">
             <div class="counsel">
                 <span class="number">88146330</span>
-                <img class="image" src="../0IMages/Asset 19-8.png" alt="">
+                <img class="image" src="./IMages/Asset 19-8.png" alt="">
                 <span class="info">برای مشاوره تماس بگیرید</span>
             </div>
 
@@ -69,19 +70,19 @@
             <div class="hr"></div>
             <div class="layer2">
                 <div class="item">
-                    <img src="../0IMages/Asset 8-8.png" alt="">
+                    <img src="./IMages/Asset 8-8.png" alt="">
                     <span>ورود اعضا</span>
                 </div>
                 <div class="item">
-                    <img src="../0IMages/Asset 7-8.png" alt="">
+                    <img src="./IMages/Asset 7-8.png" alt="">
                     <span>صفحه نخست</span>
                 </div>
                 <div class="item">
-                    <img src="../0IMages/Asset 6-8.png" alt="">
+                    <img src="./IMages/Asset 6-8.png" class="small" alt="">
                     <span>تماس با ما</span>
                 </div>
                 <div class="item">
-                    <img src="../0IMages/Asset 5-8.png" alt="">
+                    <img src="./IMages/Asset 5-8.png" alt="">
                     <span>تقویم آموزشی</span>
                 </div>
             </div>
@@ -89,15 +90,13 @@
 
         <div class="leftCenter">
             <div class="signupLayer">
-                <img class="click" src="../0IMages/Asset 1-8.png" alt="">
+                <img class="click" src="./IMages/Asset 1-8.png" alt="">
                 <button class="orangeButton pr">ثبت نام</button>
             </div>
         </div>
 
         <div class="rightBottom">
-            <div class="EnamadWrapper">
-                <img src="../0IMages/1d2ab0.png" class="eNamad">
-            </div>
+            <img src="./IMages/1d2ab0.png" class="eNamad">
         </div>
 
         <div class="centerBottom">
@@ -122,18 +121,18 @@
                 </nav>
             </div>
             <div class="layer3">
-                <img src="../0IMages/Asset 9-8.png" alt="">
-                <img src="../0IMages/Asset 10-8.png" alt="">
-                <img src="../0IMages/Asset 11-8.png" alt="">
-                <img src="../0IMages/Asset 12-8.png" alt="">
-                <img src="../0IMages/Asset 13-8.png" alt="">
-                <img src="../0IMages/Asset 14-8.png" alt="">
-                <img src="../0IMages/Asset 15-8.png" alt="">
+                <img src="./IMages/Asset 9-8.png" alt="">
+                <img src="./IMages/Asset 10-8.png" alt="">
+                <img src="./IMages/Asset 11-8.png" alt="">
+                <img src="./IMages/Asset 12-8.png" alt="">
+                <img src="./IMages/Asset 13-8.png" alt="">
+                <img src="./IMages/Asset 14-8.png" alt="">
+                <img src="./IMages/Asset 15-8.png" alt="">
             </div>
         </div>
 
         <div class="leftBottom">
-            <img src="../0IMages/Asset 18-8.png" alt="">
+            <img src="./IMages/Asset 18-8.png" alt="">
             <span class="telegraph">مکاتبه مستقیم با ما</span>
         </div>
 
