footer done except for the fonts

--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -71,7 +71,7 @@
             <div class="layer2">
                 <div class="item">
                     <img src="./IMages/Asset 8-8.png" alt="">
-                    <span>ورود اعضا</span>
+                    <span>ورود اعضاء</span>
                 </div>
                 <div class="item">
                     <img src="./IMages/Asset 7-8.png" alt="">
