some pictures replaced

--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 </head>
 
@@ -56,7 +55,7 @@
         <div class="leftTop">
             <div class="counsel">
                 <span class="number">88146330</span>
-                <img class="image" src="./IMages/Asset 19-8.png" alt="">
+                <div class="img"></div>
                 <span class="info">برای مشاوره تماس بگیرید</span>
             </div>
 
@@ -90,7 +89,8 @@
 
         <div class="leftCenter">
             <div class="signupLayer">
-                <img class="click" src="./IMages/Asset 1-8.png" alt="">
+                <!-- <img class="click" src="./IMages/Asset 1-8.png" alt=""> -->
+                <div class="click"></div>
                 <button class="orangeButton pr">ثبت نام</button>
             </div>
         </div>
@@ -121,18 +121,25 @@
                 </nav>
             </div>
             <div class="layer3">
-                <img src="./IMages/Asset 9-8.png" alt="">
+                <div class="footerImage one"></div>
+                <div class="footerImage two"></div>
+                <div class="footerImage three"></div>
+                <div class="footerImage four"></div>
+                <div class="footerImage five"></div>
+                <div class="footerImage six"></div>
+                <div class="footerImage seven"></div>
+                <!-- <img src="./IMages/Asset 9-8.png" alt="">
                 <img src="./IMages/Asset 10-8.png" alt="">
                 <img src="./IMages/Asset 11-8.png" alt="">
                 <img src="./IMages/Asset 12-8.png" alt="">
                 <img src="./IMages/Asset 13-8.png" alt="">
                 <img src="./IMages/Asset 14-8.png" alt="">
-                <img src="./IMages/Asset 15-8.png" alt="">
+                <img src="./IMages/Asset 15-8.png" alt=""> -->
             </div>
         </div>
 
         <div class="leftBottom">
-            <img src="./IMages/Asset 18-8.png" alt="">
+            <div class="img"></div>
             <span class="telegraph">مکاتبه مستقیم با ما</span>
         </div>
 
