--- a/Home/Home.html
+++ b/Home/Home.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+
 </head>
 <body>
     <style>
@@ -23,11 +25,18 @@
     <div class="header">
         <div class="topBar">
             <div class="right">
-                021-88146330
-
-                info@tahlildadeh.com
+                <span>021-88146330</span>
+                <span>021-88146330</span>
+                <i class="fas fa-phone"></i>
+                <span>info@tahlildadeh.com</span>
+                <i class="fas fa-envelope"></i>
             </div>
             <div class="center">
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
 
             </div>
             <div class="left">
