footer center center pics replaced

--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -69,19 +69,19 @@
             <div class="hr"></div>
             <div class="layer2">
                 <div class="item">
-                    <img src="./IMages/Asset 8-8.png" alt="">
+                    <div class="img one"></div>
                     <span>ورود اعضاء</span>
                 </div>
                 <div class="item">
-                    <img src="./IMages/Asset 7-8.png" alt="">
+                    <div class="img two"></div>
                     <span>صفحه نخست</span>
                 </div>
                 <div class="item">
-                    <img src="./IMages/Asset 6-8.png" class="small" alt="">
+                    <div class="img three"></div>
                     <span>تماس با ما</span>
                 </div>
                 <div class="item">
-                    <img src="./IMages/Asset 5-8.png" alt="">
+                    <div class="img four"></div>
                     <span>تقویم آموزشی</span>
                 </div>
             </div>
