footer all pics replaced

--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -33,7 +33,7 @@
                 <span class="text">
                     دریافت اخرین اخبار آموزشگاه
                 </span>
-                <img class="img" src="./IMages/Asset 17-8.png" alt="">
+                <div class="img"></div>
             </div>
             <div class="inputwrapper">
                 <input class="emailInput" type="text" placeholder="ایمیل خود را وارد کنید">
@@ -44,7 +44,7 @@
 
         <div class="centerTop">
             <div class="layer1">
-                <img src="./IMages/Asset 21-8.png" alt="">
+                <div class="img"></div>
                 <p class="title">TAHLILDADEH ACADEMY</p>
                 <p class="address">خیابان شریعتی، بالاتر از ملک، پلاک 567، طبقه 2، واحد 7</p>
                 <p class="site">www.tahlildadeh.com</p>
