home structure made.

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 </head>
+
 <body>
     <style>
         body {
@@ -16,6 +18,7 @@
             margin: 0;
             font-family: main;
         }
+
         @font-face {
             font-family: main;
             src: url(../0Font/Dark-Sans.ttf);
@@ -40,52 +43,89 @@
 
             </div>
             <div class="left">
-
+                <div class="siteGearIcon"></div>
                 ابزار سایت
             </div>
         </div>
         <div class="headerContainer">
             <div class="logo">
-                <h2>logo</h2>
+                <div class="logo"></div>
             </div>
             <div class="header">
-                <div class="right">
-                    <div class="layer1">
-                        <div class="signupLayer">
-                            <img class="click" src="../0IMages/Asset 1-8.png" alt="">
-                            <button class="orangeButton bt pr">ثبت نام</button>
-                        </div>
+                <div class="signupLayer">
+                    <div class="click"></div>
+                    <button class="orangeButton bt pr">ثبت نام</button>
+                </div>
+                <div class="layer2">
+                    <div class="item">
+                        <div class="img one"></div>
+                        <span>ورود اعضاء</span>
                     </div>
-                    <div class="layer2">
-                        <nav>
-                            <p class="item">دوره‌های آموزشی</p>
-                            <p class="item">آموزش گام به گام</p>
-                            <p class="item">فیلم‌های آموزشی</p>
-                            <p class="item">پروژه‌ها</p>
-                            <p class="item">کتابخانه</p>
-                            <p class="item">کامپوننت</p>
-                            <p class="item">قالب</p>
-                            <p class="item">برنامه</p>
-                            <p class="item">اخبار</p>
-                        </nav>
+                    <div class="item">
+                        <div class="img two"></div>
+                        <span>صفحه نخست</span>
+                    </div>
+                    <div class="item">
+                        <div class="img three"></div>
+                        <span>تماس با ما</span>
+                    </div>
+                    <div class="item">
+                        <div class="img four"></div>
+                        <span>تقویم آموزشی</span>
                     </div>
                 </div>
-                <div class="left">
-                    left
-                </div>                
+                <div class="inputWrapper">
+                    <input type="text" class="mainSearch" placeholder="Search..." />
+                    <i class="fas fa-search"></i>
+                </div>
+
+            </div>
+            <div class="calendar">
+                <div class="FatLIne CircleBase M-50">
+                    <div class="Circle-1 M-50"></div>
+                    <div class="Circle-2 M-50"></div>
+                    <div class="Circle-3 M-50">
+                        <div class="calendar"></div>
+                        <div class="calendarText">تقویم آموزشی</div>
+                    </div>
+                </div>
+            </div>
+            <div class="title">
+                <h2>آموزشگاه تحلیل‌داده</h2>
+            </div>
+            <div class="navBar">
+                <nav>
+                    <p class="item">دوره‌های آموزشی</p>
+                    <p class="item">آموزش گام به گام</p>
+                    <p class="item">فیلم‌های آموزشی</p>
+                    <p class="item">پروژه‌ها</p>
+                    <p class="item">کتابخانه</p>
+                    <p class="item">کامپوننت</p>
+                    <p class="item">قالب</p>
+                    <p class="item">برنامه</p>
+                    <p class="item">اخبار</p>
+                </nav>
+            </div>
+            <div class="spaceRightSide">
+                <span>با مجوز رسمی از سازمان فنی و حرفه‌ای کشور</span>
+
+            </div>
+            <div class="space">
             </div>
             <div class="sideMenu">
-                <h1 class="sideTitle">آموزشگاه تحلیل‌داده</h1>
-                <span>با مجوز رسمی از سازمان فنی و حرفه‌ای کشور</span>
-                <button class="pillButton">درباره ما</button>
-                <button class="pillButton">همکاری با‌ما</button>
-                <button class="pillButton">مشتریان ما</button>
+                <img src="../data/Asset 3-8.png" class="rightSideImage" alt="">
+                <div class="buttons">
+                    <button class="pillButton">درباره ما</button>
+                    <button class="pillButton">همکاری با‌ما</button>
+                    <button class="pillButton">مشتریان ما</button>
+                </div>
             </div>
             <div class="content">
-                <h2>this is c</h2>
+                <div class="pic"></div>
             </div>
         </div>
     </div>
 
 </body>
+
 </html>
