--- a/Home/Home.html
+++ b/Home/Home.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="inputWrapper">
-                    <input type="text" class="mainSearch" placeholder="Search..." />
+                    <input type="text" class="mainSearch" placeholder="جستجو..." />
                     <i class="fas fa-search"></i>
                 </div>
 
