--- a/Home/Home.html
+++ b/Home/Home.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="../Responsive.css">
 
 </head>
 
