unneccesary data removed

--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -90,14 +90,13 @@
 
         <div class="leftCenter">
             <div class="signupLayer">
-                <!-- <img class="click" src="./IMages/Asset 1-8.png" alt=""> -->
                 <div class="click"></div>
                 <button class="orangeButton pr">ثبت نام</button>
             </div>
         </div>
 
         <div class="rightBottom">
-            <img src="./IMages/1d2ab0.png" class="eNamad">
+            <img src="../data/1d2ab0.png" class="eNamad">
         </div>
 
         <div class="centerBottom">
@@ -129,13 +128,6 @@
                 <div class="footerImage five"></div>
                 <div class="footerImage six"></div>
                 <div class="footerImage seven"></div>
-                <!-- <img src="./IMages/Asset 9-8.png" alt="">
-                <img src="./IMages/Asset 10-8.png" alt="">
-                <img src="./IMages/Asset 11-8.png" alt="">
-                <img src="./IMages/Asset 12-8.png" alt="">
-                <img src="./IMages/Asset 13-8.png" alt="">
-                <img src="./IMages/Asset 14-8.png" alt="">
-                <img src="./IMages/Asset 15-8.png" alt=""> -->
             </div>
         </div>
 
