--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -6,26 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../initialValues.css">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="../Responsive.css">
+
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 </head>
 
 <body>
-
-    <style>
-        body {
-            direction: rtl;
-            font-family: main;
-            margin: 0;
-        }
-
-        @font-face {
-            font-family: main;
-            src: url("../0Font/Dark-Sans.woff");
-        }
-    </style>
 
     <div class="footer">
 
