new layout run is done. ver 1

--- a/content.html
+++ b/content.html
@@ -1,3 +1,105 @@
+<div class="header">
+    <div class="topBar">
+        <div class="right">
+            <span>021-88146330</span>
+            <span>021-88146330</span>
+            <i class="fas fa-phone"></i>
+            <span>info@tahlildadeh.com</span>
+            <i class="fas fa-envelope"></i>
+        </div>
+        <div class="center">
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-twitter"></i>
+
+        </div>
+        <div class="left">
+            <div class="siteGearIcon"></div>
+            ابزار سایت
+        </div>
+    </div>
+    <div class="headerContainer">
+        <div class="logo">
+            <div class="logo"></div>
+        </div>
+        <div class="header">
+            <div class="signupLayer">
+                <div class="click"></div>
+                <button class="orangeButton bt pr">ثبت نام</button>
+            </div>
+            <div class="layer2">
+                <div class="item">
+                    <div class="img one"></div>
+                    <span>ورود اعضاء</span>
+                </div>
+                <div class="item">
+                    <div class="img two"></div>
+                    <span>صفحه نخست</span>
+                </div>
+                <div class="item">
+                    <div class="img three"></div>
+                    <span>تماس با ما</span>
+                </div>
+                <div class="item">
+                    <div class="img four"></div>
+                    <span>تقویم آموزشی</span>
+                </div>
+            </div>
+            <div class="inputWrapper">
+                <input type="text" class="mainSearch" placeholder="جستجو..." />
+                <i class="fas fa-search"></i>
+            </div>
+
+        </div>
+        <div class="calendar">
+            <div class="FatLIne CircleBase M-50">
+                <div class="Circle-1 M-50"></div>
+                <div class="Circle-2 M-50"></div>
+                <div class="Circle-3 M-50">
+                    <div class="calendar"></div>
+                    <div class="calendarText">تقویم آموزشی</div>
+                </div>
+            </div>
+        </div>
+        <div class="title">
+            <h2>آموزشگاه تحلیل‌داده</h2>
+        </div>
+        <div class="navBar">
+            <nav>
+                <p class="item">دوره‌های آموزشی</p>
+                <p class="item">آموزش گام به گام</p>
+                <p class="item">فیلم‌های آموزشی</p>
+                <p class="item">پروژه‌ها</p>
+                <p class="item">کتابخانه</p>
+                <p class="item">کامپوننت</p>
+                <p class="item">قالب</p>
+                <p class="item">برنامه</p>
+                <p class="item">اخبار</p>
+            </nav>
+        </div>
+        <div class="spaceRightSide">
+            <span>با مجوز رسمی از سازمان فنی و حرفه‌ای کشور</span>
+
+        </div>
+        <div class="space">
+        </div>
+        <div class="sideMenu">
+            <img src="../data/Asset 3-8.png" class="rightSideImage" alt="">
+            <div class="buttons">
+                <button class="pillButton">درباره ما</button>
+                <button class="pillButton">همکاری با‌ما</button>
+                <button class="pillButton">مشتریان ما</button>
+            </div>
+        </div>
+        <div class="content">
+            <div class="pic"></div>
+        </div>
+    </div>
+</div>
+
+
 <div class="footer">
 
     <div class="rightTop">
