--- a/Run.html
+++ b/Run.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 
-    
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" type="text/css" media="(min-width: 980px)" href="./Run/screen-media.min.css">
     <link rel="stylesheet" type="text/css" media="(min-width: 480px) and (max-width: 980px)" href="./Run/tablet-media.min.css">
     <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="./Run/mobile-media.min.css">
