some bugs fixed, images location changed

--- a/content.html
+++ b/content.html
@@ -86,15 +86,15 @@
         <div class="space">
         </div>
         <div class="sideMenu">
-            <img src="../data/Asset 3-8.png" class="rightSideImage" alt="">
+            <img src="./images/img/Asset 3-8.png" class="rightSideImage" alt="">
             <div class="buttons">
                 <button class="pillButton">درباره ما</button>
                 <button class="pillButton">همکاری با‌ما</button>
                 <button class="pillButton">مشتریان ما</button>
             </div>
         </div>
-        <div class="content">
-            <div class="pic"></div>
+        <div class="slider">
+            <div class="pic">This is Slider</div>
         </div>
     </div>
 </div>
