--- a/Run.html
+++ b/Run.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0027)http://tahlildadeh.ir:2626/ -->
-<html><link rel="stylesheet" href="./Run/Swiper.css"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>    
+<link rel="stylesheet" href="./Run/Swiper.css"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width">
     <title></title>
@@ -21,12 +22,11 @@
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 
 
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" type="text/css" media="(min-width: 980px)" href="./Run/screen-media.min.css">
     <link rel="stylesheet" type="text/css" media="(min-width: 480px) and (max-width: 980px)" href="./Run/tablet-media.min.css">
     <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="./Run/mobile-media.min.css">
    
-
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="http://tahlildadeh.ir:2626/" type="" sizes="16x16">
 </head>
 <body>
