topbar right section structured

--- a/content.html
+++ b/content.html
@@ -2,10 +2,14 @@
     <div class="topBar">
         <div class="right">
             <span>021-88146330</span>
-            <span>021-88146330</span>
-            <i class="fas fa-phone"></i>
-            <span>info@tahlildadeh.com</span>
-            <i class="fas fa-envelope"></i>
+            <div class="wrap">
+                <span>021-88146330</span>
+                <i class="fas fa-phone"></i>
+            </div>
+            <div class="wrap">
+                <span>info@tahlildadeh.com</span>
+                <i class="fas fa-envelope"></i>
+            </div>
         </div>
         <div class="center">
             <i class="fab fa-youtube"></i>
