signup button layer renamed and click bug fix

--- a/content.html
+++ b/content.html
@@ -29,7 +29,7 @@
             <div class="logo"></div>
         </div>
         <div class="header">
-            <div class="signupLayer">
+            <div class="signupButtonLayer">
                 <div class="click"></div>
                 <button class="orangeButton bt pr">ثبت نام</button>
             </div>
@@ -167,7 +167,7 @@
 
     <div class="leftCenter">
 
-        <a class="signupLayer" href="http://tahlildadeh.ir:2626/Courses/Courses.aspx">
+        <a class="signupButtonLayer" href="http://tahlildadeh.ir:2626/Courses/Courses.aspx">
             <div class="click"></div>
             <button class="orangeButton pr">
                  ثبت نام‌
