header and footer made semantic

--- a/content.html
+++ b/content.html
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
     <div class="topBar">
         <div class="right">
             <span>021-88146330</span>
@@ -24,6 +24,7 @@
             ابزار سایت
         </div>
     </div>
+
     <div class="headerContainer">
         <div class="logo">
             <div class="logo"></div>
@@ -101,10 +102,12 @@
             <div class="pic">This is Slider</div>
         </div>
     </div>
-</div>
+</header>
 
 
-<div class="footer">
+
+
+<footer class="footer">
 
     <div class="rightTop">
         <div class="layer">
@@ -217,4 +220,4 @@
         <a class="telegraph" href="http://tahlildadeh.ir:2626/FooterInfo/ContactUS.aspx">مکاتبه مستقیم با ما</a>
     </div>
 
-</div>
+</footer>
