header side menu pic fixed. slider shadow made

--- a/content.html
+++ b/content.html
@@ -91,7 +91,7 @@
         <div class="space">
         </div>
         <div class="sideMenu">
-            <img src="./images/img/Asset 3-8.png" class="rightSideImage" alt="">
+            <div class="rightSideImage"></div>
             <div class="buttons">
                 <button class="pillButton">درباره ما</button>
                 <button class="pillButton">همکاری با‌ما</button>
@@ -104,7 +104,10 @@
     </div>
 </header>
 
-
+<div class="atnaHost">
+    آتنا‌هاست
+    <span>همیشه میزبان شماییم</span>
+</div>
 
 
 <footer class="footer">
