four steps of progress section started

--- a/content.html
+++ b/content.html
@@ -109,6 +109,30 @@
     <span>همیشه میزبان شماییم</span>
 </div>
 
+<div class="mainPageSection">
+    <div class="title">
+        <div class="pic"></div>
+        <div class="text">چهار گام موفقیت</div>
+    </div>
+    <div class="flex">
+        <div class="box box1">
+            <div class="colored"><span class="step"> گام اول</span></div>
+            <div class="text">مشاوره</div>
+        </div>
+        <div class="box box2">
+            <div class="colored"><span class="step"> گام دوم</span></div>
+            <div class="text">ثبت نام</div>
+        </div>
+        <div class="box box3">
+            <div class="colored"><span class="step"> گام سوم</span></div>
+            <div class="text">شرکت در کلاس</div>
+        </div>
+        <div class="box box4">
+            <div class="colored"><span class="step"> گام چهارم</span></div>
+            <div class="text">پشتیبانی رایگان</div>
+        </div>
+    </div>
+</div>
 
 <footer class="footer">
 
