--- a/content.html
+++ b/content.html
@@ -111,8 +111,9 @@
 
 <div class="mainPageSection">
     <div class="title">
-        <div class="pic"></div>
-        <div class="text">چهار گام موفقیت</div>
+        <div class="pic">
+            <div class="text">چهار گام موفقیت</div>
+        </div>
     </div>
     <div class="flex">
         <div class="box box1">
