outlet structure done

--- a/content.html
+++ b/content.html
@@ -90,50 +90,79 @@
         </div>
         <div class="space">
         </div>
-        <div class="sideMenu">
+        <aside class="sideMenu">
             <div class="rightSideImage"></div>
             <div class="buttons">
                 <button class="pillButton">درباره ما</button>
                 <button class="pillButton">همکاری با‌ما</button>
                 <button class="pillButton">مشتریان ما</button>
             </div>
-        </div>
+        </aside>
         <div class="slider">
             <div class="pic">This is Slider</div>
         </div>
     </div>
 </header>
 
-<div class="atnaHost">
+<section class="atnaHost">
     آتنا‌هاست
     <span>همیشه میزبان شماییم</span>
-</div>
+</section>
 
-<div class="mainPageSection">
-    <div class="title">
-        <div class="pic">
-            <div class="text">چهار گام موفقیت</div>
+<section class="outlet">
+    
+    <section class="mainPageSection">
+        <div class="title">
+            <div class="pic">
+                <div class="text">چهار گام موفقیت</div>
+            </div>
         </div>
-    </div>
-    <div class="flex">
-        <div class="box box1">
-            <div class="colored"><span class="step"> گام اول</span></div>
-            <div class="text">مشاوره</div>
+        <div class="flex">
+            <div class="box box1">
+                <div class="colored"><span class="step"> گام اول</span></div>
+                <div class="text">مشاوره</div>
+            </div>
+            <div class="box box2">
+                <div class="colored"><span class="step"> گام دوم</span></div>
+                <div class="text">ثبت نام</div>
+            </div>
+            <div class="box box3">
+                <div class="colored"><span class="step"> گام سوم</span></div>
+                <div class="text">شرکت در کلاس</div>
+            </div>
+            <div class="box box4">
+                <div class="colored"><span class="step"> گام چهارم</span></div>
+                <div class="text">پشتیبانی رایگان</div>
+            </div>
         </div>
-        <div class="box box2">
-            <div class="colored"><span class="step"> گام دوم</span></div>
-            <div class="text">ثبت نام</div>
+    </section>
+
+    <section class="mainPageSection">
+        <div class="title">
+            <div class="pic">
+                <div class="text">جدید ترین دوره‌ها</div>
+            </div>
         </div>
-        <div class="box box3">
-            <div class="colored"><span class="step"> گام سوم</span></div>
-            <div class="text">شرکت در کلاس</div>
+        <div class="flex">
+            <div class="box box1">
+                <div class="colored"><span class="step"> گام اول</span></div>
+                <div class="text">مشاوره</div>
+            </div>
+            <div class="box box2">
+                <div class="colored"><span class="step"> گام دوم</span></div>
+                <div class="text">ثبت نام</div>
+            </div>
+            <div class="box box3">
+                <div class="colored"><span class="step"> گام سوم</span></div>
+                <div class="text">شرکت در کلاس</div>
+            </div>
+            <div class="box box4">
+                <div class="colored"><span class="step"> گام چهارم</span></div>
+                <div class="text">پشتیبانی رایگان</div>
+            </div>
         </div>
-        <div class="box box4">
-            <div class="colored"><span class="step"> گام چهارم</span></div>
-            <div class="text">پشتیبانی رایگان</div>
-        </div>
-    </div>
-</div>
+    </section>
+</section>
 
 <footer class="footer">
 
