--- a/content.html
+++ b/content.html
@@ -12,45 +12,45 @@
             </div>
         </div>
         <div class="center">
-            <i class="fab fa-youtube"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-linkedin-in"></i>
-            <i class="fab fa-twitter"></i>
+            <a href="#" class="fab fa-youtube"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-linkedin-in"></a>
+            <a href="#" class="fab fa-twitter"></a>
 
         </div>
-        <div class="left">
+        <a href="#" class="left">
             <div class="siteGearIcon"></div>
             ابزار سایت
-        </div>
+        </a>
     </div>
 
     <div class="headerContainer">
         <div class="logo">
-            <div class="logo"></div>
+            <a href="#" class="logo"></a>
         </div>
         <div class="header">
-            <div class="signupButtonLayer">
+            <a href="#" class="signupButtonLayer">
                 <div class="click"></div>
                 <button class="orangeButton bt pr">ثبت نام</button>
-            </div>
+            </a>
             <div class="layer2">
-                <div class="item">
+                <a href="#" class="item">
                     <div class="img one"></div>
                     <span>ورود اعضاء</span>
-                </div>
-                <div class="item">
+                </a>
+                <a href="#" class="item">
                     <div class="img two"></div>
                     <span>صفحه نخست</span>
-                </div>
-                <div class="item">
+                </a>
+                <a href="#" class="item">
                     <div class="img three"></div>
                     <span>تماس با ما</span>
-                </div>
-                <div class="item">
+                </a>
+                <a href="#" class="item">
                     <div class="img four"></div>
                     <span>تقویم آموزشی</span>
-                </div>
+                </a>
             </div>
             <div class="inputWrapper">
                 <input type="text" class="mainSearch" placeholder="جستجو..." />
@@ -59,29 +59,29 @@
 
         </div>
         <div class="calendar">
-            <div class="FatLIne CircleBase M-50">
+            <a href="#" class="FatLIne CircleBase M-50">
                 <div class="Circle-1 M-50"></div>
                 <div class="Circle-2 M-50"></div>
                 <div class="Circle-3 M-50">
                     <div class="calendar"></div>
                     <div class="calendarText">تقویم آموزشی</div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="title">
             <h2>آموزشگاه تحلیل‌داده</h2>
         </div>
         <div class="navBar">
             <nav>
-                <p class="item">دوره‌های آموزشی</p>
-                <p class="item">آموزش گام به گام</p>
-                <p class="item">فیلم‌های آموزشی</p>
-                <p class="item">پروژه‌ها</p>
-                <p class="item">کتابخانه</p>
-                <p class="item">کامپوننت</p>
-                <p class="item">قالب</p>
-                <p class="item">برنامه</p>
-                <p class="item">اخبار</p>
+                <a href="#" class="item">دوره‌های آموزشی</a>
+                <a href="#" class="item">آموزش گام به گام</a>
+                <a href="#" class="item">فیلم‌های آموزشی</a>
+                <a href="#" class="item">پروژه‌ها</a>
+                <a href="#" class="item">کتابخانه</a>
+                <a href="#" class="item">کامپوننت</a>
+                <a href="#" class="item">قالب</a>
+                <a href="#" class="item">برنامه</a>
+                <a href="#" class="item">اخبار</a>
             </nav>
         </div>
         <div class="spaceRightSide">
@@ -91,11 +91,11 @@
         <div class="space">
         </div>
         <aside class="sideMenu">
-            <div class="rightSideImage"></div>
+            <a href="#" class="rightSideImage"></a>
             <div class="buttons">
-                <button class="pillButton">درباره ما</button>
-                <button class="pillButton">همکاری با‌ما</button>
-                <button class="pillButton">مشتریان ما</button>
+                <a href="#" class="pillButton">درباره ما</a>
+                <a href="#" class="pillButton">همکاری با‌ما</a>
+                <a href="#" class="pillButton">مشتریان ما</a>
             </div>
         </aside>
         <div class="slider">
@@ -104,10 +104,10 @@
     </div>
 </header>
 
-<section class="atnaHost">
+<a href="#" class="atnaHost">
     آتنا‌هاست
     <span>همیشه میزبان شماییم</span>
-</section>
+</a>
 
 <section class="outlet">
     
@@ -118,21 +118,37 @@
             </div>
         </div>
         <div class="flex">
-            <div class="box box1">
-                <div class="colored"><span class="step"> گام اول</span></div>
-                <div class="text">مشاوره</div>
+            <div class="boxWrapper">
+                <div class="box box1">
+                    <div class="coloredWrapper">
+                        <div class="colored"><span class="step"> گام اول</span></div>
+                    </div>
+                    <div class="text">مشاوره</div>
+                </div>
             </div>
-            <div class="box box2">
-                <div class="colored"><span class="step"> گام دوم</span></div>
-                <div class="text">ثبت نام</div>
+            <div class="boxWrapper">
+                <div class="box box2">
+                    <div class="coloredWrapper">
+                        <div class="colored"><span class="step"> گام دوم</span></div>
+                    </div>
+                    <div class="text">ثبت نام</div>
+                </div>
             </div>
-            <div class="box box3">
-                <div class="colored"><span class="step"> گام سوم</span></div>
-                <div class="text">شرکت در کلاس</div>
+            <div class="boxWrapper">
+                <div class="box box3">
+                    <div class="coloredWrapper">
+                        <div class="colored"><span class="step"> گام سوم</span></div>
+                    </div>
+                    <div class="text">شرکت در کلاس</div>
+                </div>
             </div>
-            <div class="box box4">
-                <div class="colored"><span class="step"> گام چهارم</span></div>
-                <div class="text">پشتیبانی رایگان</div>
+            <div class="boxWrapper">
+                <div class="box box4">
+                    <div class="coloredWrapper">
+                        <div class="colored"><span class="step"> گام چهارم</span></div>
+                    </div>
+                    <div class="text">پشتیبانی رایگان</div>
+                </div>
             </div>
         </div>
     </section>
