top bar icons fixed and cube renamed

--- a/content.html
+++ b/content.html
@@ -4,11 +4,11 @@
             <span>021-88146330</span>
             <div class="wrap">
                 <span>021-88146330</span>
-                <i class="fas fa-phone"></i>
+                <div class="phone"></div>
             </div>
             <div class="wrap">
                 <span>info@tahlildadeh.com</span>
-                <i class="fas fa-envelope"></i>
+                <div class="envelope"></div>
             </div>
         </div>
         <div class="center">
